# a1_sim_py

./: .gitignore  README.md  log.txt
controllers/a1_controller/scripts/: robot_controller_gazebo.py
controllers/go1_controller/scripts/: robot_controller_gazebo.py
quadruped_unitree/scripts/: joystick_relay.py  respawn_robot.py
src/controllers/go1_controller/: package.xml  setup.cfg
src/controllers/go1_controller/go1_controller/: go1_controller.py
src/controllers/go1_controller/go1_controller/RobotController/: PIDController.py
src/controllers/go1_controller/launch/: robot_controller_launch.py
src/custom_twist_mux/: package.xml  setup.cfg  setup.py
src/custom_twist_mux/custom_twist_mux/: custom_twist_mux.py
src/descriptions/go1_description/: CMakeLists.txt  package.xml
src/descriptions/go1_description/launch/: go1_rviz_launch.py
src/descriptions/go1_description/urdf/: go1.urdf
src/gazebos/go1_gazebo/: CMakeLists.txt  package.xml
src/gazebos/go1_gazebo/launch/: simulation_launch.py
src/gazebos/go1_gazebo/rviz/: go1_gazebo.rviz
src/go1_controller/: setup.py
src/go1_controller/go1_controller/: go1_controller.py
src/go1_controller/go1_controller/InverseKinematics/: robot_IK.py
src/go1_controller/go1_controller/RobotController/: CrawlGaitController.py  RestController.py  RobotController.py  StandController.py  TrotGaitController.py
src/go1_controller/launch/: robot_controller_ROS2.launch
src/go1_description/: CMakeLists.txt  package.xml
src/go1_description/launch/: go1_rviz_launch.py
src/go1_description/rviz/: check_joint.rviz
src/go1_description/urdf/: go1.urdf
src/go1_gazebo/: CMakeLists.txt
src/go1_gazebo/launch/: simulation.launch  simulation_ROS2.launch  simulation_launch.py  spawn_launch.py
src/quadruped_unitree/: CMakeLists.txt  package.xml
src/quadruped_unitree/launch/: custom_twist_mux_ROS2.launch  custom_twist_mux_launch.py  go1_gazebo_ROS2.launch  go1_gazebo_launch.py
src/quadruped_unitree/scripts/: base_link_pose.py  joystick_relay.py  respawn_robot.py
