<?xml version="1.0"?>
<package format="2">
  <name>quadruped_unitree</name>
  <version>1.0.0</version>
  <description>Quadruped simulation package for Unitree Robotics</description>

  <!-- This package is forked from lnotspotl "lnotspotl@gmail.com" -->
  <maintainer email="tge1375@naver.com">kimsooyoung</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
