<?xml version="1.0"?>
<package format="3">
  <name>go1_gazebo</name>
  <version>1.0.0</version>
  <description>The go1_gazebo package</description>

  <!-- This package is forked from lnotspotl "lnotspotl@gmail.com" -->
  <maintainer email="tge1375@naver.com">kimsooyoung</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>std_msgs</depend>
  <depend>angles</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros2_pkgs</depend>
  <depend>ros2launch</depend>

  <exec_depend>ros2_controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
        <build_type>ament_cmake</build_type>
  </export>
</package>
